--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@graphql-tools/schema": "^8.3.1",
+    "@prisma/client": "^3.4.1",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "jsonwebtoken": "^8.5.1",
+    "prisma": "^3.4.1"
   }
 }
